--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,33 +1,26 @@
 <div>
-  <h1 x-large class="sample-content">Your Content Here</h1>
+  <h1 x-large class="sample-content">
+    Items
+  </h1>
 
-  <hr>
+    <ul>  
+      <li *ngFor="let item of items">
+        {{ item.id }} - {{ item.name }}
+        <button (click)="delete(item)">Delete</button>
+      </li>
+    </ul>
 
- 
   <hr>
 
   <div>
-    <h4>Local State</h4>
 
-    <form (ngSubmit)="submitState(localState.value)" autocomplete="off">
+    <form (ngSubmit)="saveItem()" autocomplete="off">
 
-      <input
-        [value]="localState.value"
-        (input)="localState.value = $event.target.value"
-        placeholder="Submit Local State to App State"
-        autofocus>
+      <input type="text" [(ngModel)]="newItem.name" name="name">
 
-      <button>Submit Value</button>
+      <button>Save</button>
     </form>
-    <!--
-        <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
-        Rather than wiring up two-way data-binding ourselves with [value] and (input)
-        we can use Angular's [(ngModel)] syntax
-        <input type="text" name="textInput" [(ngModel)]="localState.value" autofocus>
-      -->
-
-    <pre>this.localState = {{ localState | json }}</pre>
-
   </div>
+
 
 </div>
