--- a/src/client/app/app.component.css
+++ b/src/client/app/app.component.css
@@ -3,6 +3,22 @@ html, body{
   font-family: Arial, Helvetica, sans-serif
 }
 
+body {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 8px;
+}
+
+a {
+  padding: 4px;
+}
+
+a:active,
+a:visited {
+  color: blue;
+}
+
 a.active {
-  background-color: gray;
+  color: white;
+  background-color: orange;
 }
